--- a/src/Login/style/LoginStyle.css
+++ b/src/Login/style/LoginStyle.css
@@ -1,3 +1,3 @@
-.arco-demo-form-item-required > label {
+.arco-demo-form-item-required > div > label[for="username_input"] {
   white-space: nowrap;
 }
