feat(login): 优化登录页面布局和功能
- 调整表单布局类型，增加 LayoutType 类型定义
- 修改表单样式，优化输入框和标签的排列方式
- 添加全局状态管理和路由配置
- 集成多语言支持
- 重构主入口文件，引入全局配置和路由

--- a/src/Login/style/LoginStyle.css
+++ b/src/Login/style/LoginStyle.css
@@ -1,3 +1,13 @@
+.LoginContainer {
+  display: flex;
+  flex-direction: row;
+}
+
 .arco-demo-form-item-required > div > label {
   white-space: nowrap;
+}
+
+div.arco-demo-form-item-required {
+  flex-flow: row nowrap;
+  column-gap: 20px;
 }
