refactor(layout): 优化登录页面布局和样式
- 在 LoginPage 中添加 banner 区域，并调整样式
- 调整 Forms 组件的最大宽度为 50%
- 更新 LoginStyle.css，增加 banner 样式
- 修改 main.jsx，引入全局字体大小设置和 global.less 样式
- 在 Index 组件中添加主题切换时更新 body 属性的逻辑

--- a/src/Login/style/LoginStyle.css
+++ b/src/Login/style/LoginStyle.css
@@ -13,3 +13,8 @@ div.arco-demo-form-item-required {
   flex-flow: row nowrap;
   column-gap: 20px;
 }
+.banner {
+  flex: 1;
+  border: 1px solid black;
+  width: 50%;
+}
