style:优化项目结构，新增ts支持，

--- a/src/common/styles/global.less
+++ b/src/common/styles/global.less
@@ -1,5 +1,5 @@
-@import "./common/styles/variables.less";
-@import "./common/styles/mixins.less";
+@import "./variables.less";
+@import "./mixins.less";
 
 // 根元素变量定义
 :root {
