--- a/src/Pages/Login/style/LoginStyle.css
+++ b/src/Pages/Login/style/LoginStyle.css
@@ -1,8 +1,10 @@
 .LoginContainer {
   display: flex;
   flex-direction: row;
+  border: 1px solid black;
+  flex: 1;
 }
 .banner {
-  background-image: url("../../../assets/images/frog.jpg");
-  flex: 1;
+  width: 200px;
+  height: 200px;
 }
