--- a/src/Pages/Login/style/loginStyle.less
+++ b/src/Pages/Login/style/loginStyle.less
@@ -1,9 +1,11 @@
 .LoginContainer {
   display: flex;
   flex-direction: row;
+  border: 1px solid black;
+  flex: 1;
 }
 
 .banner {
-  background-image: url("../../../assets/images/frog.jpg");
-  flex: 1;
+  width: 200px;
+  height: 200px;
 }
