--- a/src/common/styles/global.css
+++ b/src/common/styles/global.css
@@ -26,7 +26,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 1080px;
   min-height: 100vh;
   background-color: var(--bg-color);
   color: var(--text-color);
@@ -53,6 +53,7 @@ body {
   }
   body {
     min-width: 280px;
+    height: 100%;
   }
 }
 .text-primary {
