--- a/src/common/styles/global.less
+++ b/src/common/styles/global.less
@@ -36,7 +36,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 1080px;
   min-height: 100vh;
   background-color: var(--bg-color);
   color: var(--text-color);
@@ -69,6 +69,7 @@ body {
 
   body {
     min-width: 280px;
+    height: 100%;
   }
 }
 
