--- a/src/Pages/Admin/Login/style/loginStyle.less
+++ b/src/Pages/Admin/Login/style/loginStyle.less
@@ -8,7 +8,7 @@
   height: 100vh;
   width: 100vw;
   background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-  overflow: hidden;
+  overflow: auto;
   box-sizing: border-box;
   padding: 20px;
   .bannerImgFrog {
